# transit-parser

./: .gitignore  Cargo.toml  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml  publish.yml  release.yml
benchmarks/: BENCH.md  README.md  __init__.py  bench_csv_json.py  bench_gtfs_parsing.py  bench_lazy_gtfs.py  bench_txc_parsing.py  run_benchmarks.py
docs/: index.md  performance.md
docs/api/: exceptions.md  filtering.md  gtfs.md  index.md  schedule.md  txc.md
docs/getting-started/: installation.md  quickstart.md
docs/guide/: conversion.md  filtering.md  gtfs.md  schedule.md  txc.md
python/transit_parser/: __init__.py  _core.pyi  dataframes.py  filtering.py
python/transit_parser/adapters/: __init__.py
rust/csv-parser/src/: lib.rs  reader.rs  schema.rs  writer.rs
rust/gtfs-parser/src/: lazy.rs  lib.rs  reader.rs  writer.rs
rust/schedule-parser/: Cargo.toml
rust/schedule-parser/src/: lib.rs  reader.rs
rust/schedule-parser/src/deadhead/: inferrer.rs  mod.rs
rust/schedule-parser/src/formats/: generic_csv.rs  mod.rs  presets.rs
rust/schedule-parser/src/models/: block.rs  deadhead.rs  duty.rs  mod.rs  schedule.rs  schedule_row.rs  shift.rs
rust/schedule-parser/src/validation/: config.rs  mod.rs  validator.rs
rust/schedule-parser/src/validation/rules/: block_continuity.rs  business_rules.rs  gtfs_integrity.rs  mod.rs
rust/transit-bindings/: Cargo.toml
tests/: __init__.py  conftest.py
tests/python/: __init__.py  test_conversion.py  test_exceptions.py  test_filtering.py  test_gtfs.py  test_lazy_gtfs.py  test_txc.py
(+32 files in other folders)
